force-app/main/default/objects/ArchivoExterno__c/ArchivoExterno__c.object-meta.xml
<CustomObject>
    <label>Documento SharePoint</label>
    <nameField>
        <displayFormat>FILE-{00000000}</displayFormat>
        <label>Código Archivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos SharePoint</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>