force-app/main/default/objects/ArchivoExterno__c/fields/Comprobar_URL__c.field-meta.xml
<CustomField>
    <fullName>Comprobar_URL__c</fullName>
    <formula>IF( 
			LEN(URL1__c)&gt;15,
			&apos;Tiene URL&apos;, &apos;No tiene URL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comprobar URL</label>
    <type>Text</type>
</CustomField>