force-app/main/default/objects/ArchivoExterno__c/fields/Comunicacion__c.field-meta.xml
<CustomField>
    <fullName>Comunicacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comunicación</label>
    <referenceTo>Comunicacion__c</referenceTo>
    <relationshipLabel>Documentos SharePoint</relationshipLabel>
    <relationshipName>Documentos_SharePoint</relationshipName>
    <type>Lookup</type>
</CustomField>