force-app/main/default/objects/ArchivoExterno__c/fields/Enlace__c.field-meta.xml
<CustomField>
    <fullName>Enlace__c</fullName>
    <formula>HYPERLINK(URL1__c &amp; URL2__c &amp; URL3__c,&quot;Ver Documento&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enlace</label>
    <type>Text</type>
</CustomField>