force-app/main/default/objects/ArchivoExterno__c/fields/Nombre_del_Fichero__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Fichero__c</fullName>
    <label>Nombre del Fichero</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>