force-app/main/default/objects/ArchivoExterno__c/fields/Proyecto_C__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_C__c</fullName>
    <formula>Comunicacion__r.Proyecto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecto C</label>
    <type>Text</type>
</CustomField>