force-app/main/default/objects/ArchivoExterno__c/fields/Proyecto_E__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_E__c</fullName>
    <formula>Subentregable__r.Grupos_de_Entregables__r.Proyecto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecto E</label>
    <type>Text</type>
</CustomField>