force-app/main/default/objects/ArchivoExterno__c/fields/ProyectoGE__c.field-meta.xml
<CustomField>
    <fullName>ProyectoGE__c</fullName>
    <formula>Entregable__r.Proyecto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecto GE</label>
    <type>Text</type>
</CustomField>