force-app/main/default/objects/ArchivoExterno__c/fields/Tiene_url__c.field-meta.xml
<CustomField>
    <fullName>Tiene_url__c</fullName>
    <description>Comprobar si el entregable tiene o no un documento SharePoint</description>
    <formula>IF( ISBLANK(URL1__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Tiene url?</label>
    <type>Checkbox</type>
</CustomField>