force-app/main/default/objects/ArchivoExterno__c/fields/URL1__c.field-meta.xml
<CustomField>
    <fullName>URL1__c</fullName>
    <label>URL1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>