force-app/main/default/objects/ArchivoExterno__c/fields/Verificar_PDF__c.field-meta.xml
<CustomField>
    <fullName>Verificar_PDF__c</fullName>
    <description>Comprueba que la dirección URL referencie a un documento PDF</description>
    <formula>IF(UPPER(TRIM(RIGHT(URL__c, 3)))=&apos;PDF&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verificar PDF</label>
    <type>Checkbox</type>
</CustomField>