force-app/main/default/objects/ArchivoExterno__c/validationRules/URL_LONG_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_LONG_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( URL_LONG__c )</errorConditionFormula>
    <errorMessage>URL es un campo requerido</errorMessage>
</ValidationRule>