force-app/main/default/objects/ArchivoExterno__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_del_Fichero__c</columns>
    <columns>Firmado__c</columns>
    <columns>Enlace__c</columns>
    <columns>Entregable__c</columns>
    <columns>Subentregable__c</columns>
    <columns>Comunicacion__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>