force-app/main/default/objects/ArchivoExterno__c/listViews/Ciudad_de_la_Justicia_de_Alicante.listView-meta.xml
<ListView>
    <fullName>Ciudad_de_la_Justicia_de_Alicante</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Nombre_del_Fichero__c</columns>
    <columns>Firmado__c</columns>
    <columns>Enlace__c</columns>
    <columns>Entregable__c</columns>
    <columns>Subentregable__c</columns>
    <columns>Comunicacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_C__c</field>
        <operation>equals</operation>
        <value>Ciudad de la Justicia de Alicante</value>
    </filters>
    <filters>
        <field>Proyecto_E__c</field>
        <operation>equals</operation>
        <value>Ciudad de la Justicia de Alicante</value>
    </filters>
    <filters>
        <field>ProyectoGE__c</field>
        <operation>equals</operation>
        <value>Ciudad de la Justicia de Alicante</value>
    </filters>
    <label>Ciudad de la Justicia de Alicante</label>
    <sharedTo>
        <group>Ciudad_Justicia_Alicante</group>
    </sharedTo>
</ListView>