force-app/main/default/objects/ArchivoExterno__c/listViews/Documentos_Hu_rfanos.listView-meta.xml
<ListView>
    <fullName>Documentos_Hu_rfanos</fullName>
    <columns>NAME</columns>
    <columns>Nombre_del_Fichero__c</columns>
    <columns>Firmado__c</columns>
    <columns>Enlace__c</columns>
    <columns>Entregable__c</columns>
    <columns>Subentregable__c</columns>
    <columns>Comunicacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subentregable__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Entregable__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Comunicacion__c</field>
        <operation>equals</operation>
    </filters>
    <label>Documentos Huérfanos</label>
</ListView>