force-app/main/default/objects/ArchivoExterno__c/listViews/Gestion_de_la_Calidad_TIC.listView-meta.xml
<ListView>
    <fullName>Gestion_de_la_Calidad_TIC</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Nombre_del_Fichero__c</columns>
    <columns>Firmado__c</columns>
    <columns>Enlace__c</columns>
    <columns>Entregable__c</columns>
    <columns>Subentregable__c</columns>
    <columns>Comunicacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_C__c</field>
        <operation>equals</operation>
        <value>Gestión de la Calidad TIC</value>
    </filters>
    <filters>
        <field>Proyecto_E__c</field>
        <operation>equals</operation>
        <value>Gestión de la Calidad TIC</value>
    </filters>
    <filters>
        <field>ProyectoGE__c</field>
        <operation>equals</operation>
        <value>Gestión de la Calidad TIC</value>
    </filters>
    <label>Gestión de la Calidad TIC</label>
    <sharedTo>
        <group>Gestion_de_la_Calidad_TIC_Consultores</group>
    </sharedTo>
</ListView>