force-app/main/default/objects/ArchivoExterno__c/listViews/Mantenimiento_ERP_EPMAPS.listView-meta.xml
<ListView>
    <fullName>Mantenimiento_ERP_EPMAPS</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Nombre_del_Fichero__c</columns>
    <columns>Firmado__c</columns>
    <columns>Enlace__c</columns>
    <columns>Entregable__c</columns>
    <columns>Subentregable__c</columns>
    <columns>Comunicacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_C__c</field>
        <operation>equals</operation>
        <value>Mantenimiento ERP EPMAPS</value>
    </filters>
    <filters>
        <field>Proyecto_E__c</field>
        <operation>equals</operation>
        <value>Mantenimiento ERP EPMAPS</value>
    </filters>
    <filters>
        <field>ProyectoGE__c</field>
        <operation>equals</operation>
        <value>Mantenimiento ERP EPMAPS</value>
    </filters>
    <label>Mantenimiento ERP EPMAPS</label>
    <sharedTo></sharedTo>
</ListView>