force-app/main/default/objects/ArchivoExterno__c/listViews/Mt_Quadre_Com_Municipal_Ay_Barcelona.listView-meta.xml
<ListView>
    <fullName>Mt_Quadre_Com_Municipal_Ay_Barcelona</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Nombre_del_Fichero__c</columns>
    <columns>Firmado__c</columns>
    <columns>Enlace__c</columns>
    <columns>Entregable__c</columns>
    <columns>Subentregable__c</columns>
    <columns>Comunicacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto_C__c</field>
        <operation>equals</operation>
        <value>Mt Quadre Com. Municipal Ay. Barcelona</value>
    </filters>
    <filters>
        <field>Proyecto_E__c</field>
        <operation>equals</operation>
        <value>Mt Quadre Com. Municipal Ay. Barcelona</value>
    </filters>
    <filters>
        <field>ProyectoGE__c</field>
        <operation>equals</operation>
        <value>Mt Quadre Com. Municipal Ay. Barcelona</value>
    </filters>
    <label>Mt Quadre Com. Municipal Ay. Barcelona</label>
    <sharedTo>
        <group>CM_Ayto_Barcelona_Consultores</group>
    </sharedTo>
</ListView>